<resources>
    <string name="app_name">Ticket To Ride</string>
    <string name="username">User Name:</string>
    <string name="username_hint">(username)</string>
    <string name="password">Password:</string>;
    <string name="password_hint">(password)</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="confirm">Confirm:</string>
    <string name="confirm_hint">(confirm password)</string>
    <string name="register_button">Register</string>
    <string name="create_game_button">CREATE GAME</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="create_new_game">CREATE NEW GAME</string>
    <string name="join_new_game">JOIN NEW GAME</string>
    <string name="join_game_button">JOIN GAME</string>
    <string name="rejoin_game_button">RE-JOIN GAME</string>
    <string name="game_name_tab">Game</string>
    <string name="players_tab">Players</string>
    <string name="in_game_tab">In Game</string>
    <string name="waiting_for_players">Waiting for more players...</string>
    <string name="current_number_of_players">1/5</string>
    <string name="start_game">Start Game</string>
    <string name="name">Name:</string>
    <string name="hint_game_name">(name of game)</string>
    <string name="dialog_players">Players</string>
    <string name="dialog_color">Pick Your Color</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_black">Black</string>
    <string name="title_activity_ticket_map">TicketMapActivity</string>
    <string name="chat_message">(Enter a message)</string>
    <string name="city1">city1</string>
    <string name="city2">city2</string>
    <string name="destination_points">point value</string>
    <string name="choose_num_of_trains">Number of Trains:</string>
    <string name="ip_select">IP Address:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="section_format" />
    <string name="results_name">Name</string>
    <string name="results_points">Points Earned</string>
    <string name="results_additions">Addtions</string>
    <string name="results_points_total">Total Points</string>
    <string name="results_longest_route">The Longest Route Belongs to: </string>
    <string name="done_button">Done</string>
    <string name="dialog_dest_selection_prompt">CHOOSE AT LEAST 2 DESTINATION CARDS</string>
    <string name="title_activity_test_login">TestLoginActivity</string>

    <string name="test_dialog">Skip the dumb stuff</string>
    <string name="num_players_test">Number of players to add to game</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="beginTurn">IT IS NOW YOUR TURN.</string>
    <string name="seeMap">See Map</string>
    <string name="dialog_any_route_prompt">Choose which color to use for route.</string>
    <string name="return_to_game_list">Return To Games</string>

</resources>
