<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ticket_to_ride_end_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/log_in"
    android:orientation="horizontal"
    tools:context="com.example.alec.phase_05.Client.UI.TicketToRideEndGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#AA000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/results_winner_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/results_name"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/results_points"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/results_additions"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/results_points_total"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/white" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/results_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/results_longest_route"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/results_longest_route"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/results_return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/return_to_game_list" />
    </LinearLayout>
</LinearLayout>
