<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505050"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/join_new_game"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_color"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/join_game_container_red"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/join_game_button_red"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_dark"
                android:text="@string/color_red"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_game_container_blue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/join_game_button_blue"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/color_blue"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_game_container_yellow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/join_game_button_yellow"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFF00"
                android:text="@string/color_yellow"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_game_container_green"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/join_game_button_green"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_green_dark"
                android:text="@string/color_green"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_game_container_black"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <Button
                android:id="@+id/join_game_button_black"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:text="@string/color_black"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>