<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@mipmap/log_in"
    tools:context="com.example.alec.phase_05.Client.UI.LogInActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.187"
        ></LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">
        </LinearLayout>

        <LinearLayout
            android:background="#AAFFFFFF"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".03">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.72"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/sign_in_username_textbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/username"
                            android:textStyle="bold"/>


                        <EditText
                            android:id="@+id/sign_in_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/username_hint"
                            android:maxLength="15"
                            android:textStyle="italic"
                            android:background="#E0E0E0" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/sign_in_password_textbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/sign_in_username_textbox"
                            android:padding="4dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/password"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/log_in_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:hint="@string/password_hint"
                            android:maxLength="15"
                            android:textStyle="italic"
                            android:background="#E0E0E0"/>

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25">

                    <Button
                        android:id="@+id/log_in_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="7dp"
                        android:text="@string/sign_in_button"
                        />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"></LinearLayout>

                <RelativeLayout
                    android:id="@+id/log_in_line"
                    android:layout_width="match_parent"
                    android:background="#000000"
                    android:layout_gravity="center_vertical"
                    android:layout_height="0dp"
                    android:layout_weight="0.83">
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.08"></LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".03"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.72"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/register_username_textbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/username"
                            android:textStyle="bold"/>


                        <EditText
                            android:id="@+id/register_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/username_hint"
                            android:maxLength="15"
                            android:textStyle="italic"
                            android:background="#E0E0E0" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/register_password_textbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/password"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/register_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="7dp"
                            android:hint="@string/password_hint"
                            android:maxLength="15"
                            android:textStyle="italic"
                            android:background="#E0E0E0"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/register_confirm_textbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/confirm"
                            android:textStyle="bold"/>

                        <EditText
                            android:id="@+id/register_confirm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="23dp"
                            android:hint="@string/password_hint"
                            android:maxLength="15"
                            android:textStyle="italic"
                            android:background="#E0E0E0"/>

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25">

                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="7dp"
                        android:text="@string/register_button"
                        />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15">
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.187">
    </LinearLayout>

</LinearLayout>


